--- a/index.html
+++ b/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <title>Kareem Wilson</title>
-      <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-      <link rel="stylesheet" href="" />
-   </head>
-   <body class="portfolio">
-      <div>
-        <div class="nav-bar">
-            <ul class="nav-items">
-                <li class="nav1">
-                    Portofolio
-                </li>
-                <li class="nav2">About</li>
-                <li class="nav3">Contact</li>
-            </ul>
-        </div>
-        <div class="content">
-            <div class="welcome-section">
-                <h1 class="title">Hello there. I'm Kareem.</h1>
-                <h2 class="subTitle">I'm a Software Developer</h2>
-                <h4 class="bio">Microuant in Microverse, Looking forward to play with the chips of Computers!</h4>
-            </div>
+  <head>
+    <title>Kareem Wilson</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="container">
+        <ul class="nav-list">
+          <li class="nav1">Portofolio</li>
+          <li class="nav2">About</li>
+          <li class="nav3">Contact</li>
+        </ul>
+      <div class="content">
+        <div class="welcome-section">
+          <h1 class="title">Hello there. I'm Kareem.</h1>
+          <h2 class="subTitle">I'm a Software Developer</h2>
+          <h4 class="bio">
+            Microuant in Microverse, Looking forward to play with the chips of
+            Computers!
+          </h4>
         </div>
       </div>
-   </body>
+    </div>
+  </body>
 </html>
