change font family

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
           <li class="nav3">Contact</li>
         </ul>
       <div class="content">
-        <div class="welcome-section">
+        <section class="welcome-section">
           <h1 class="title">Hello there. I'm Kareem.</h1>
           <h2 class="subTitle">I'm a Software Developer</h2>
           <h4 class="bio">
             Microuant in Microverse, Looking forward to play with the chips of
             Computers!
           </h4>
-        </div>
+        </section>
       </div>
     </div>
   </body>
