--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <body>
     <div class="container">
         <ul class="nav-list">
-          <li class="nav1">Portofolio</li>
-          <li class="nav2">About</li>
-          <li class="nav3">Contact</li>
+          <li class="nav1"><a href="#Welcome">Portofolio</a></li>
+          <li class="nav2"><a href="#About">About</a></li>
+          <li class="nav3"><a href="#Contact">Contact</a></li>
         </ul>
       <div class="content">
-        <section class="welcome-section">
-          <h1 class="title">Hello there. I'm Kareem.</h1>
+        <section id="Welcome" class="welcome-section">
+          <h1 class="title">Hello there, I'm Kareem.</h1>
           <h2 class="subTitle">I'm a Software Developer</h2>
           <h4 class="bio">
             Microuant in Microverse, Looking forward to play with the chips of
