--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <title>Kareem Wilson</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -17,9 +19,14 @@
           <h1 class="title">Hello there, I'm Kareem.</h1>
           <h2 class="subTitle">I'm a Software Developer</h2>
           <h4 class="bio">
-            Microuant in Microverse, Looking forward to play with the chips of
+            Microuant in Microverse, My favourite hobby turning coffee and legacy code into clean code, Looking forward to play with the chips of
             Computers!
           </h4>
+          <div class="socials">
+            <a href="" class="fa fa-github"></a>
+            <a href="" class="fa fa-linkedin"></a>
+            <a href="" class="fa fa-instagram"></a>
+          </div>
         </section>
       </div>
     </div>
