--- a/index.html
+++ b/index.html
@@ -2,25 +2,30 @@
 <html>
   <head>
     <title>Kareem Wilson</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="container">
-      <ul class="nav-list">
-        <li class="nav1"><a href="#Welcome">Portofolio</a></li>
-        <li class="nav2"><a href="#About">About</a></li>
-        <li class="nav3"><a href="#Contact">Contact</a></li>
-      </ul>
+        <ul class="nav-list">
+          <li class="nav-item"><a href="#Welcome">Portofolio</a></li>
+          <li class="nav-item"><a href="#About">About</a></li>
+          <li class="nav-item"><a href="#Contact">Contact</a></li>
+          <li class="fa fa-bars"></li>
+        </ul>
       <div class="content">
         <section id="Welcome" class="welcome-section">
           <h1 class="title">Hello there, I'm Kareem.</h1>
           <h2 class="subTitle">I'm a Software Developer</h2>
           <h4 class="bio">
-            Microuant in Microverse, My favourite hobby turning coffee and legacy code into clean code, Looking forward to play with the chips of
-            Computers!
+            Microuant in Microverse, My favourite hobby turning coffee and
+            legacy code into clean code, Looking forward to play with the chips
+            of Computers!
           </h4>
           <div class="socials">
             <a href="" class="fa fa-github"></a>
