--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   </head>
   <body>
     <div class="container">
-        <ul class="nav-list">
-          <li class="nav-item"><a href="#Welcome">Portofolio</a></li>
-          <li class="nav-item"><a href="#About">About</a></li>
-          <li class="nav-item"><a href="#Contact">Contact</a></li>
-          <li class="fa fa-bars"></li>
-        </ul>
+      <ul class="nav-list">
+        <li class="nav-item"><a href="#Welcome">Portofolio</a></li>
+        <li class="nav-item"><a href="#About">About</a></li>
+        <li class="nav-item"><a href="#Contact">Contact</a></li>
+        <li class="fa fa-bars"></li>
+      </ul>
       <div class="content">
         <section id="Welcome" class="welcome-section">
           <h1 class="title">Hello there, I'm Kareem.</h1>
@@ -28,9 +28,15 @@
             of Computers!
           </h4>
           <div class="socials">
-            <a href="" class="fa fa-github"></a>
-            <a href="" class="fa fa-linkedin"></a>
-            <a href="" class="fa fa-instagram"></a>
+            <a href="https://github.com/KareemWilson" class="fa fa-github"></a>
+            <a
+              href="https://www.linkedin.com/in/kareem-wilson/"
+              class="fa fa-linkedin"
+            ></a>
+            <a
+              href="https://www.instagram.com/code.afternoon/"
+              class="fa fa-instagram"
+            ></a>
           </div>
         </section>
       </div>
