--- a/index.html
+++ b/index.html
@@ -12,34 +12,35 @@
   </head>
   <body>
     <div class="container">
-      <ul class="nav-list">
-        <li class="nav-item"><a href="#Welcome">Portofolio</a></li>
-        <li class="nav-item"><a href="#About">About</a></li>
-        <li class="nav-item"><a href="#Contact">Contact</a></li>
-        <li class="fa fa-bars"></li>
-      </ul>
-      <div class="content">
-        <section id="Welcome" class="welcome-section">
-          <h1 class="title">Hello there, I'm Kareem.</h1>
-          <h2 class="subTitle">I'm a Software Developer</h2>
-          <h4 class="bio">
-            Microuant in Microverse, My favourite hobby turning coffee and
-            legacy code into clean code, Looking forward to play with the chips
-            of Computers!
-          </h4>
-          <div class="socials">
-            <a href="https://github.com/KareemWilson" class="fa fa-github"></a>
-            <a
-              href="https://www.linkedin.com/in/kareem-wilson/"
-              class="fa fa-linkedin"
-            ></a>
-            <a
-              href="https://www.instagram.com/code.afternoon/"
-              class="fa fa-instagram"
-            ></a>
-          </div>
-        </section>
-      </div>
+      <header class="header">
+        <h1 class="logo">Kareem</h1>
+        <ul class="nav-list">
+          <li class="nav-item"><a href="#Welcome">Portofolio</a></li>
+          <li class="nav-item"><a href="#About">About</a></li>
+          <li class="nav-item"><a href="#Contact">Contact</a></li>
+          <li class="fa fa-bars"></li>
+        </ul>
+      </header>
+      <section id="Welcome" class="welcome-section">
+        <h1 class="title">Hello there, I'm Kareem.</h1>
+        <h2 class="subTitle">I'm a Software Developer</h2>
+        <p class="bio">
+          Microuant in Microverse, My favourite hobby turning coffee and legacy
+          code into clean code, Looking forward to play with the chips of
+          Computers!
+        </p>
+        <div class="socials">
+          <a href="https://github.com/KareemWilson" class="fa fa-github"></a>
+          <a
+            href="https://www.linkedin.com/in/kareem-wilson/"
+            class="fa fa-linkedin"
+          ></a>
+          <a
+            href="https://www.instagram.com/code.afternoon/"
+            class="fa fa-instagram"
+          ></a>
+        </div>
+      </section>
     </div>
   </body>
 </html>
