--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </ul>
       </header>
       <section id="Welcome" class="welcome-section">
-        <h1 class="title">Hello there, I'm Kareem.</h1>
-        <h2 class="subTitle">I'm a Software Developer</h2>
+        <h1 class="title">Hello there. I'm Kareem.</h1>
+        <h2 class="subTitle">I'm a software developer</h2>
         <p class="bio">
           Microuant in Microverse, My favourite hobby turning coffee and legacy
           code into clean code, Looking forward to play with the chips of
