--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <header class="header">
-        <h1 class="logo">Kareem</h1>
+        <h1 class="logo">Welcome</h1>
         <ul class="nav-list">
           <li class="nav-item"><a href="#Welcome">Portofolio</a></li>
           <li class="nav-item"><a href="#About">About</a></li>
@@ -22,7 +22,7 @@
         </ul>
       </header>
       <section id="Welcome" class="welcome-section">
-        <h1 class="title">Hello there. I'm Kareem.</h1>
+        <h1 class="title">Hey there. I'm Kareem.</h1>
         <h2 class="subTitle">I'm a software developer</h2>
         <p class="bio">
           Microuant in Microverse, My favourite hobby turning coffee and legacy
