--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
           <li class="nav-item"><a href="#Welcome">Portofolio</a></li>
           <li class="nav-item"><a href="#About">About</a></li>
           <li class="nav-item"><a href="#Contact">Contact</a></li>
-          <li class="fa fa-bars"></li>
         </ul>
+        <nav class="fa fa-bars"></nav>
       </header>
       <section id="Welcome" class="welcome-section">
         <h1 class="title">Hey there. I'm Kareem.</h1>
