--- a/index.html
+++ b/index.html
@@ -12,33 +12,40 @@
   </head>
   <body>
     <div class="container">
-      <header class="header">
-        <h1 class="logo">Welcome</h1>
-        <ul class="nav-list">
-          <li class="nav-item"><a href="#Welcome">Portofolio</a></li>
-          <li class="nav-item"><a href="#About">About</a></li>
-          <li class="nav-item"><a href="#Contact">Contact</a></li>
-        </ul>
-        <nav class="fa fa-bars"></nav>
-      </header>
-      <section id="Welcome" class="welcome-section">
-        <h1 class="title">Hey there. I'm Kareem.</h1>
-        <h2 class="subTitle">I'm a software developer</h2>
-        <p class="bio">
-          Microuant in Microverse, My favourite hobby turning coffee and legacy
-          code into clean code, Looking forward to play with the chips of
-          Computers!
-        </p>
-        <div class="socials">
-          <a href="https://github.com/KareemWilson" class="fa fa-github"></a>
-          <a
-            href="https://www.linkedin.com/in/kareem-wilson/"
-            class="fa fa-linkedin"
-          ></a>
-          <a
-            href="https://www.instagram.com/code.afternoon/"
-            class="fa fa-instagram"
-          ></a>
+      <div class="bg">
+        <header class="header">
+          <h1 class="logo">Welcome</h1>
+          <ul class="nav-list">
+            <li class="nav-item"><a href="#Welcome">Portofolio</a></li>
+            <li class="nav-item"><a href="#About">About</a></li>
+            <li class="nav-item"><a href="#Contact">Contact</a></li>
+          </ul>
+          <nav class="fa fa-bars"></nav>
+        </header>
+        <section id="Welcome" class="welcome-section">
+          <h1 class="title">Hey there. I'm Kareem.</h1>
+          <h2 class="subTitle">I'm a software developer</h2>
+          <p class="bio">
+            Microuant in Microverse, My favourite hobby turning coffee and legacy
+            code into clean code, Looking forward to play with the chips of
+            Computers!
+          </p>
+          <div class="socials">
+            <a href="https://github.com/KareemWilson" class="fa fa-github"></a>
+            <a
+              href="https://www.linkedin.com/in/kareem-wilson/"
+              class="fa fa-linkedin"
+            ></a>
+            <a
+              href="https://www.instagram.com/code.afternoon/"
+              class="fa fa-instagram"
+            ></a>
+          </div>
+        </section>
+      </div>
+      <section id="works" class="works-section">
+        <div>
+          <h1>hello</h1>
         </div>
       </section>
     </div>
