making project card

--- a/index.html
+++ b/index.html
@@ -44,8 +44,39 @@
         </section>
       </div>
       <section id="works" class="works-section">
-        <div>
-          <h1>hello</h1>
+        <div class="projects-list">
+          <h1 class="worksTitle">My Recent Works</h1>
+          <div class="projectCard">
+            <div class="cardTop">
+              <h1 class="cardImg">1</h1>
+            </div>
+            <div class="cardBottom">
+              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
+            </div>
+          </div>
+          <div class="projectCard">
+            <div class="cardTop">
+              <h1 class="cardImg">2</h1>
+            </div>
+            <div class="cardBottom">
+              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
+              <ul class="techs">
+                <li class="tech">Ruby on Rails</li>
+                <li class="tech">CSS</li>
+                <li class="tech">Javascript</li>
+                <li class="tech">html</li>
+              </ul>
+            </div>
+          </div>
+          <div class="projectCard">
+            <div class="cardTop">
+              <h1 class="cardImg">3</h1>
+            </div>
+            <div class="cardBottom">
+              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
+
+            </div>
+          </h1>
         </div>
       </section>
     </div>
