--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h1 class="worksTitle">My Recent Works</h1>
           <div class="projectCard">
             <div class="cardTop">
-              <h1 class="cardImg">1</h1>
+              <h1 class="cardImg"></h1>
             </div>
             <div class="cardBottom">
               <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
@@ -56,7 +56,7 @@
           </div>
           <div class="projectCard">
             <div class="cardTop">
-              <h1 class="cardImg">2</h1>
+              <h1 class="cardImg"></h1>
             </div>
             <div class="cardBottom">
               <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
@@ -66,11 +66,12 @@
                 <li class="tech">Javascript</li>
                 <li class="tech">html</li>
               </ul>
+              <button class="btn">See Project</button>
             </div>
           </div>
           <div class="projectCard">
             <div class="cardTop">
-              <h1 class="cardImg">3</h1>
+              <h1 class="cardImg"></h1>
             </div>
             <div class="cardBottom">
               <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
