--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
           <h1 class="title">Hey there. I'm Kareem.</h1>
           <h2 class="subTitle">I'm a software developer</h2>
           <p class="bio">
-            Microuant in Microverse, My favourite hobby turning coffee and legacy
-            code into clean code, Looking forward to play with the chips of
-            Computers!
+            Microuant in Microverse, My favourite hobby turning coffee and
+            legacy code into clean code, Looking forward to play with the chips
+            of Computers!
           </p>
           <div class="socials">
             <a href="https://github.com/KareemWilson" class="fa fa-github"></a>
@@ -44,14 +44,22 @@
         </section>
       </div>
       <section id="works" class="works-section">
-        <div class="projects-list">
-          <h1 class="worksTitle">My Recent Works</h1>
+        <div class="section-container">
+          <h1 class="sectionTitle">My Recent Works</h1>
+          <span class="border"></span>
           <div class="projectCard">
             <div class="cardTop">
               <h1 class="cardImg"></h1>
             </div>
             <div class="cardBottom">
               <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
+              <ul class="techs">
+                <li class="tech">Ruby on Rails</li>
+                <li class="tech">CSS</li>
+                <li class="tech">Javascript</li>
+                <li class="tech">html</li>
+              </ul>
+              <button class="btn">See Project</button>
             </div>
           </div>
           <div class="projectCard">
@@ -75,10 +83,103 @@
             </div>
             <div class="cardBottom">
               <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
-
+              <ul class="techs">
+                <li class="tech">Ruby on Rails</li>
+                <li class="tech">CSS</li>
+                <li class="tech">Javascript</li>
+                <li class="tech">html</li>
+              </ul>
+              <button class="btn">See Project</button>
             </div>
-          </h1>
+          </div>
+          <div class="projectCard">
+            <div class="cardTop">
+              <h1 class="cardImg"></h1>
+            </div>
+            <div class="cardBottom">
+              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
+              <ul class="techs">
+                <li class="tech">Ruby on Rails</li>
+                <li class="tech">CSS</li>
+                <li class="tech">Javascript</li>
+                <li class="tech">html</li>
+              </ul>
+              <button class="btn">See Project</button>
+            </div>
+          </div>
+          <div class="projectCard">
+            <div class="cardTop">
+              <h1 class="cardImg"></h1>
+            </div>
+            <div class="cardBottom">
+              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
+              <ul class="techs">
+                <li class="tech">Ruby on Rails</li>
+                <li class="tech">CSS</li>
+                <li class="tech">Javascript</li>
+                <li class="tech">html</li>
+              </ul>
+              <button class="btn">See Project</button>
+            </div>
+          </div>
+          <div class="projectCard">
+            <div class="cardTop">
+              <h1 class="cardImg"></h1>
+            </div>
+            <div class="cardBottom">
+              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
+              <ul class="techs">
+                <li class="tech">Ruby on Rails</li>
+                <li class="tech">CSS</li>
+                <li class="tech">Javascript</li>
+                <li class="tech">html</li>
+              </ul>
+              <button class="btn">See Project</button>
+            </div>
+          </div>
         </div>
+      </section>
+      <section id="About" class="aboutme-section">
+        <div class="section-container">
+          <h1 class="sectionTitle">About Me</h1>
+          <p class="bioAboutme"> I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+            don't hestiate to contact me.</p>
+            <button class="resumeBtn">Get My Reusme</button>
+
+          <div class="technologyCard">
+            <img src="./utils/languages.png" alt="" class="cardImg">
+            <h2 class="cardTitle">Languages</h2>
+            <ul class="list">
+              <li class="listItem">Javascript</li>
+              <li class="listItem">Ruby</li>
+              <li class="listItem">Html</li>
+              <li class="listItem">CSS</li>
+            </ul>
+          </div>
+          <div class="technologyCard">
+          <img src="./utils/frameworks.png" alt="" class="cardImg">
+            <h2 class="cardTitle">Frameworks</h2>
+            <ul class="list">
+              <li class="listItem">Bootstrap</li>
+              <li class="listItem">Ruby on rails</li>
+              <li class="listItem">RSpec</li>
+              <li class="listItem">Capybara</li>
+              <li class="listItem">Selenium</li>
+            </ul>
+          </div>
+          <div class="technologyCard">
+            <img src="./utils/skills.png" alt="" class="cardImg">
+              <h2 class="cardTitle">Skills</h2>
+              <ul class="list">
+                <li class="listItem">Codekit</li>
+                <li class="listItem">GitHub</li>
+                <li class="listItem">Codepen</li>
+                <li class="listItem">Gitlab</li>
+                <li class="listItem">Terminal</li>
+              </ul>
+            </div>
+        </div>
+      </div>
       </section>
     </div>
   </body>
