--- a/index.html
+++ b/index.html
@@ -141,11 +141,13 @@
       </section>
       <section id="About" class="aboutme-section">
         <div class="section-container">
-          <h1 class="sectionTitle">About Me</h1>
-          <p class="bioAboutme"> I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
-            don't hestiate to contact me.</p>
+          <div class="aboutHeader">
+            <h1 class="sectionTitle">About Me</h1>
+            <p class="bioAboutme"> I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+              don't hestiate to contact me.</p>
             <button class="resumeBtn">Get My Reusme</button>
 
+          </div>
           <div class="technologyCard">
             <img src="./utils/languages.png" alt="" class="cardImg">
             <h2 class="cardTitle">Languages</h2>
