--- a/index.html
+++ b/index.html
@@ -139,50 +139,57 @@
           </div>
         </div>
       </section>
-      <section id="About" class="aboutme-section">
-        <div class="section-container">
-          <div class="aboutHeader">
-            <h1 class="sectionTitle">About Me</h1>
-            <p class="bioAboutme"> I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
-              don't hestiate to contact me.</p>
-            <button class="resumeBtn">Get My Reusme</button>
+      <div class="aboutbg">
+        <img src="./utils/icons/illustration-about me-1-desktop.svg" alt="" class="aboutbg1">
+        <img src="./utils/icons/illustration 1- about me-mobile.svg" alt="" class="aboutbg1mobile">
 
-          </div>
-          <div class="technologyCard">
-            <img src="./utils/languages.png" alt="" class="cardImg">
-            <h2 class="cardTitle">Languages</h2>
-            <ul class="list">
-              <li class="listItem">Javascript</li>
-              <li class="listItem">Ruby</li>
-              <li class="listItem">Html</li>
-              <li class="listItem">CSS</li>
-            </ul>
-          </div>
-          <div class="technologyCard">
-          <img src="./utils/frameworks.png" alt="" class="cardImg">
-            <h2 class="cardTitle">Frameworks</h2>
-            <ul class="list">
-              <li class="listItem">Bootstrap</li>
-              <li class="listItem">Ruby on rails</li>
-              <li class="listItem">RSpec</li>
-              <li class="listItem">Capybara</li>
-              <li class="listItem">Selenium</li>
-            </ul>
-          </div>
-          <div class="technologyCard">
-            <img src="./utils/skills.png" alt="" class="cardImg">
-              <h2 class="cardTitle">Skills</h2>
+        <section id="About" class="aboutme-section">
+          <div class="section-container">
+            <div class="aboutHeader">
+              <h1 class="sectionTitle">About Me</h1>
+              <p class="bioAboutme"> I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+                don't hestiate to contact me.</p>
+              <button class="resumeBtn">Get My Reusme</button>
+              <img src="./utils/icons/illustration-about-me-2-desktop.svg" alt="" class="aboutbg2">
+              <img src="./utils/icons/illustration 2-about me mobile.svg" alt="" class="aboutbg2mobile">
+
+            </div>
+            <div class="technologyCard">
+              <img src="./utils/languages.png" alt="" class="cardImg">
+              <h2 class="cardTitle">Languages</h2>
               <ul class="list">
-                <li class="listItem">Codekit</li>
-                <li class="listItem">GitHub</li>
-                <li class="listItem">Codepen</li>
-                <li class="listItem">Gitlab</li>
-                <li class="listItem">Terminal</li>
+                <li class="listItem">Javascript</li>
+                <li class="listItem">Ruby</li>
+                <li class="listItem">Html</li>
+                <li class="listItem">CSS</li>
               </ul>
             </div>
+            <div class="technologyCard">
+            <img src="./utils/frameworks.png" alt="" class="cardImg">
+              <h2 class="cardTitle">Frameworks</h2>
+              <ul class="list">
+                <li class="listItem">Bootstrap</li>
+                <li class="listItem">Ruby on rails</li>
+                <li class="listItem">RSpec</li>
+                <li class="listItem">Capybara</li>
+                <li class="listItem">Selenium</li>
+              </ul>
+            </div>
+            <div class="technologyCard">
+              <img src="./utils/skills.png" alt="" class="cardImg">
+                <h2 class="cardTitle">Skills</h2>
+                <ul class="list">
+                  <li class="listItem">Codekit</li>
+                  <li class="listItem">GitHub</li>
+                  <li class="listItem">Codepen</li>
+                  <li class="listItem">Gitlab</li>
+                  <li class="listItem">Terminal</li>
+                </ul>
+              </div>
+          </div>
         </div>
+        </section>
       </div>
-      </section>
     </div>
   </body>
 </html>
