fix linters errors

--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
         </div>
       </section>
       <div class="aboutbg">
-        <img src="./utils/icons/illustration-about me-1-desktop.svg" alt="" class="aboutbg1">
-        <img src="./utils/icons/illustration 1- about me-mobile.svg" alt="" class="aboutbg1mobile">
+        <img src="./utils/icons/aboutme1desktop.svg" alt="" class="aboutbg1">
+        <img src="./utils/icons/aboutmemobile1.svg" alt="" class="aboutbg1mobile">
 
         <section id="About" class="aboutme-section">
           <div class="section-container">
@@ -150,8 +150,8 @@
               <p class="bioAboutme"> I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
                 don't hestiate to contact me.</p>
               <button class="resumeBtn">Get My Reusme</button>
-              <img src="./utils/icons/illustration-about-me-2-desktop.svg" alt="" class="aboutbg2">
-              <img src="./utils/icons/illustration 2-about me mobile.svg" alt="" class="aboutbg2mobile">
+              <img src="./utils/icons/aboutme2desktop.svg" alt="" class="aboutbg2">
+              <img src="./utils/icons/aboutme2mobile.svg" alt="" class="aboutbg2mobile">
 
             </div>
             <div class="technologyCard">
@@ -165,7 +165,7 @@
               </ul>
             </div>
             <div class="technologyCard">
-            <img src="./utils/frameworks.png" alt="" class="cardImg">
+              <img src="./utils/frameworks.png" alt="" class="cardImg">
               <h2 class="cardTitle">Frameworks</h2>
               <ul class="list">
                 <li class="listItem">Bootstrap</li>
@@ -186,8 +186,8 @@
                   <li class="listItem">Terminal</li>
                 </ul>
               </div>
+            </div>
           </div>
-        </div>
         </section>
       </div>
     </div>
