--- a/index.html
+++ b/index.html
@@ -48,8 +48,59 @@
           <h1 class="sectionTitle">My Recent Works</h1>
           <span class="border"></span>
           <div class="projectCard">
+            <div class="cardTop"></div>
+            <div class="cardBottom">
+              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
+              <ul class="techs">
+                <li class="tech">Ruby on Rails</li>
+                <li class="tech">CSS</li>
+                <li class="tech">Javascript</li>
+                <li class="tech">html</li>
+              </ul>
+              <button class="btn">See Project</button>
+            </div>
+          </div>
+          <div class="projectCard">
+            <div class="cardTop"></div>
+            <div class="cardBottom">
+              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
+              <ul class="techs">
+                <li class="tech">Ruby on Rails</li>
+                <li class="tech">CSS</li>
+                <li class="tech">Javascript</li>
+                <li class="tech">html</li>
+              </ul>
+              <button class="btn">See Project</button>
+            </div>
+          </div>
+          <div class="projectCard">
+            <div class="cardTop"></div>
+            <div class="cardBottom">
+              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
+              <ul class="techs">
+                <li class="tech">Ruby on Rails</li>
+                <li class="tech">CSS</li>
+                <li class="tech">Javascript</li>
+                <li class="tech">html</li>
+              </ul>
+              <button class="btn">See Project</button>
+            </div>
+          </div>
+          <div class="projectCard">
+            <div class="cardTop"></div>
+            <div class="cardBottom">
+              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
+              <ul class="techs">
+                <li class="tech">Ruby on Rails</li>
+                <li class="tech">CSS</li>
+                <li class="tech">Javascript</li>
+                <li class="tech">html</li>
+              </ul>
+              <button class="btn">See Project</button>
+            </div>
+          </div>
+          <div class="projectCard">
             <div class="cardTop">
-              <h1 class="cardImg"></h1>
             </div>
             <div class="cardBottom">
               <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
@@ -64,67 +115,6 @@
           </div>
           <div class="projectCard">
             <div class="cardTop">
-              <h1 class="cardImg"></h1>
-            </div>
-            <div class="cardBottom">
-              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
-              <ul class="techs">
-                <li class="tech">Ruby on Rails</li>
-                <li class="tech">CSS</li>
-                <li class="tech">Javascript</li>
-                <li class="tech">html</li>
-              </ul>
-              <button class="btn">See Project</button>
-            </div>
-          </div>
-          <div class="projectCard">
-            <div class="cardTop">
-              <h1 class="cardImg"></h1>
-            </div>
-            <div class="cardBottom">
-              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
-              <ul class="techs">
-                <li class="tech">Ruby on Rails</li>
-                <li class="tech">CSS</li>
-                <li class="tech">Javascript</li>
-                <li class="tech">html</li>
-              </ul>
-              <button class="btn">See Project</button>
-            </div>
-          </div>
-          <div class="projectCard">
-            <div class="cardTop">
-              <h1 class="cardImg"></h1>
-            </div>
-            <div class="cardBottom">
-              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
-              <ul class="techs">
-                <li class="tech">Ruby on Rails</li>
-                <li class="tech">CSS</li>
-                <li class="tech">Javascript</li>
-                <li class="tech">html</li>
-              </ul>
-              <button class="btn">See Project</button>
-            </div>
-          </div>
-          <div class="projectCard">
-            <div class="cardTop">
-              <h1 class="cardImg"></h1>
-            </div>
-            <div class="cardBottom">
-              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
-              <ul class="techs">
-                <li class="tech">Ruby on Rails</li>
-                <li class="tech">CSS</li>
-                <li class="tech">Javascript</li>
-                <li class="tech">html</li>
-              </ul>
-              <button class="btn">See Project</button>
-            </div>
-          </div>
-          <div class="projectCard">
-            <div class="cardTop">
-              <h1 class="cardImg"></h1>
             </div>
             <div class="cardBottom">
               <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
@@ -176,15 +166,14 @@
             </div>
             <div class="technologyCard">
               <img src="./utils/skills.png" alt="" class="cardImg">
-                <h2 class="cardTitle">Skills</h2>
-                <ul class="list">
-                  <li class="listItem">Codekit</li>
-                  <li class="listItem">GitHub</li>
-                  <li class="listItem">Codepen</li>
-                  <li class="listItem">Gitlab</li>
-                  <li class="listItem">Terminal</li>
-                </ul>
-              </div>
+              <h2 class="cardTitle">Skills</h2>
+              <ul class="list">
+                <li class="listItem">Codekit</li>
+                <li class="listItem">GitHub</li>
+                <li class="listItem">Codepen</li>
+                <li class="listItem">Gitlab</li>
+                <li class="listItem">Terminal</li>
+              </ul>
             </div>
           </div>
         </section>
