made a unique h1 tag

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="bg">
         <header class="header">
-          <h1 class="logo">Welcome</h1>
+          <p class="logo">Welcome</p>
           <ul class="nav-list">
             <li class="nav-item"><a href="#Welcome">Portofolio</a></li>
             <li class="nav-item"><a href="#About">About</a></li>
@@ -45,7 +45,7 @@
       </div>
       <section id="works" class="works-section">
         <div class="section-container">
-          <h1 class="sectionTitle">My Recent Works</h1>
+          <p class="sectionTitle">My Recent Works</p>
           <span class="border"></span>
           <div class="projectCard">
             <div class="cardTop"></div>
@@ -135,7 +135,7 @@
         <section id="About" class="aboutme-section">
           <div class="section-container">
             <div class="aboutHeader">
-              <h1 class="sectionTitle">About Me</h1>
+              <p class="sectionTitle">About Me</p>
               <p class="bioAboutme"> I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
                 don't hestiate to contact me.</p>
               <button class="resumeBtn">Get My Reusme</button>
