adjust bg code on desktop view

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
         </div>
       </section>
       <div class="aboutbg">
-        <img src="./utils/icons/aboutme1desktop.svg" alt="" class="aboutbg1">
-        <img src="./utils/icons/aboutmemobile1.svg" alt="" class="aboutbg1mobile">
+        <!-- <img src="./utils/icons/aboutme1desktop.svg" alt="" class="aboutbg1">
+        <img src="./utils/icons/aboutmemobile1.svg" alt="" class="aboutbg1mobile"> -->
         <section id="About" class="aboutme-section">
           <div class="section-container">
             <div class="aboutHeader">
@@ -139,8 +139,8 @@
               <p class="bioAboutme"> I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
                 don't hestiate to contact me.</p>
               <button class="resumeBtn">Get My Reusme</button>
-              <img src="./utils/icons/aboutme2desktop.svg" alt="" class="aboutbg2">
-              <img src="./utils/icons/aboutme2mobile.svg" alt="" class="aboutbg2mobile">
+              <!-- <img src="./utils/icons/aboutme2desktop.svg" alt="" class="aboutbg2">
+              <img src="./utils/icons/aboutme2mobile.svg" alt="" class="aboutbg2mobile"> -->
 
             </div>
             <div class="technologyCard">
