--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
             </div>
           </div>
           <div class="projectCard">
-            <div class="cardTop">
-            </div>
+            <div class="cardTop"></div>
             <div class="cardBottom">
               <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
               <ul class="techs">
@@ -114,8 +113,7 @@
             </div>
           </div>
           <div class="projectCard">
-            <div class="cardTop">
-            </div>
+            <div class="cardTop"></div>
             <div class="cardBottom">
               <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
               <ul class="techs">
@@ -130,21 +128,19 @@
         </div>
       </section>
       <div class="aboutbg">
-        <!-- <img src="./utils/icons/aboutme1desktop.svg" alt="" class="aboutbg1">
-        <img src="./utils/icons/aboutmemobile1.svg" alt="" class="aboutbg1mobile"> -->
         <section id="About" class="aboutme-section">
           <div class="section-container">
             <div class="aboutHeader">
               <p class="sectionTitle">About Me</p>
-              <p class="bioAboutme"> I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
-                don't hestiate to contact me.</p>
+              <p class="bioAboutme">
+                I can help you build a product, feature or website Look through
+                some of my work and experience! If you like what you see and
+                have a project you need coded, don't hestiate to contact me.
+              </p>
               <button class="resumeBtn">Get My Reusme</button>
-              <!-- <img src="./utils/icons/aboutme2desktop.svg" alt="" class="aboutbg2">
-              <img src="./utils/icons/aboutme2mobile.svg" alt="" class="aboutbg2mobile"> -->
-
             </div>
             <div class="technologyCard">
-              <img src="./utils/languages.png" alt="" class="cardImg">
+              <img src="./utils/languages.png" alt="" class="cardImg" />
               <h2 class="cardTitle">Languages</h2>
               <ul class="list">
                 <li class="listItem">Javascript</li>
@@ -154,7 +150,7 @@
               </ul>
             </div>
             <div class="technologyCard">
-              <img src="./utils/frameworks.png" alt="" class="cardImg">
+              <img src="./utils/frameworks.png" alt="" class="cardImg" />
               <h2 class="cardTitle">Frameworks</h2>
               <ul class="list">
                 <li class="listItem">Bootstrap</li>
@@ -165,7 +161,7 @@
               </ul>
             </div>
             <div class="technologyCard">
-              <img src="./utils/skills.png" alt="" class="cardImg">
+              <img src="./utils/skills.png" alt="" class="cardImg" />
               <h2 class="cardTitle">Skills</h2>
               <ul class="list">
                 <li class="listItem">Codekit</li>
