--- a/index.html
+++ b/index.html
@@ -174,6 +174,29 @@
           </div>
         </section>
       </div>
+      <section class="contact-section">
+        <!-- <div class="contact-container">
+          <div class="sectionTitle">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</div>
+          form.
+        </div> -->
+        <form method="post" action="" class="contact-container">
+          <h3 class="sectionTitle">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h3>
+          <ul class="fields">
+            <li>
+              <input  class="full-name" placeholder="Full Name" type="text">
+            </li>
+            <li>
+              <input class="email" placeholder="E-mail" type="email">
+            </li>
+            <li>
+              <textarea class="message-input" name="message" id="msg" cols="30" rows="10">type message here</textarea>
+            </li>
+            <li>
+              <button type="submit" class="submit">Send Message</button>
+            </li>
+          </ul>
+        </form>
+      </section>
     </div>
   </body>
 </html>
