Finish html-css of contact-section

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
               <textarea class="message-input" name="message" id="msg">type message here</textarea>
             </li>
             <li>
-              <button type="submit" class="submit">Send Message</button>
+              <button type="submit" class="resumeBtn">Get in touch</button>
             </li>
           </ul>
         </form>
