Adding bg for contact-section

--- a/index.html
+++ b/index.html
@@ -191,6 +191,17 @@
               <button type="submit" class="resumeBtn">Get in touch</button>
             </li>
           </ul>
+          <div class="socials">
+            <a href="https://github.com/KareemWilson" class="fa fa-github"></a>
+            <a
+              href="https://www.linkedin.com/in/kareem-wilson/"
+              class="fa fa-linkedin"
+            ></a>
+            <a
+              href="https://www.instagram.com/code.afternoon/"
+              class="fa fa-instagram"
+            ></a>
+          </div>
         </form>
       </section>
     </div>
