--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@
           <h3 class="sectionTitle">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h3>
           <ul class="fields">
             <li>
-              <input  class="full-name" placeholder="Full Name" type="text">
+              <input  class="full-name" placeholder="Full Name" type="text" required>
             </li>
             <li>
-              <input class="email" placeholder="E-mail" type="email">
+              <input class="email" placeholder="E-mail" type="email" required>
             </li>
             <li>
-              <textarea class="message-input" name="message" id="msg">type message here</textarea>
+              <textarea class="message-input" maxlength="500" name="message" id="msg" required>Enter text here</textarea>
             </li>
             <li>
               <button type="submit" class="resumeBtn">Get in touch</button>
