--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </section>
       </div>
       <section class="contact-section">
-        <form method="post" action="" class="contact-container">
+        <form method="post" action="https://formspree.io/f/mayknqrv" class="contact-container">
           <h3 class="sectionTitle">
             I'm always interested in hearing about new projects, so if you'd
             like to chat please get in touch.
@@ -187,6 +187,7 @@
                 placeholder="Full Name"
                 type="text"
                 required
+                maxlength="30"
               />
             </li>
             <li>
