Add some css to desktop view

--- a/index.html
+++ b/index.html
@@ -210,21 +210,21 @@ Enter text here</textarea
               >
             </li>
             <li>
-              <button type="submit" class="resumeBtn">Get in touch</button>
+              <button id="getintouch" type="submit" class="resumeBtn">Get in touch</button>
             </li>
           </ul>
         </form>
       </section>
       <footer class="links">
         <div class="socials">
-          <a href="https://github.com/KareemWilson" class="fa fa-github"></a>
+          <a href="https://github.com/KareemWilson" class="fa fa-github fa-2x"></a>
           <a
             href="https://www.linkedin.com/in/kareem-wilson/"
-            class="fa fa-linkedin"
+            class="fa fa-linkedin fa-2x"
           ></a>
           <a
             href="https://www.instagram.com/code.afternoon/"
-            class="fa fa-instagram"
+            class="fa fa-instagram fa-2x"
           ></a>
         </div>
         <a href="kareemmagdywilson@gmail.com" class="myemail"
