fix linters errors #1

--- a/index.html
+++ b/index.html
@@ -175,7 +175,11 @@
         </section>
       </div>
       <section class="contact-section">
-        <form method="post" action="https://formspree.io/f/mayknqrv" class="contact-container">
+        <form
+          method="post"
+          action="https://formspree.io/f/mayknqrv"
+          class="contact-container"
+        >
           <h3 class="sectionTitle">
             I'm always interested in hearing about new projects, so if you'd
             like to chat please get in touch.
@@ -210,14 +214,19 @@ Enter text here</textarea
               >
             </li>
             <li>
-              <button id="getintouch" type="submit" class="resumeBtn">Get in touch</button>
+              <button id="getintouch" type="submit" class="resumeBtn">
+                Get in touch
+              </button>
             </li>
           </ul>
         </form>
       </section>
       <footer class="links">
         <div class="socials">
-          <a href="https://github.com/KareemWilson" class="fa fa-github fa-2x"></a>
+          <a
+            href="https://github.com/KareemWilson"
+            class="fa fa-github fa-2x"
+          ></a>
           <a
             href="https://www.linkedin.com/in/kareem-wilson/"
             class="fa fa-linkedin fa-2x"
