Animate socials icon

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             legacy code into clean code, Looking forward to play with the chips
             of Computers!
           </p>
-          <div class="socials">
+          <div class="socials anime">
             <a href="https://github.com/KareemWilson" class="fa fa-github"></a>
             <a
               href="https://www.linkedin.com/in/kareem-wilson/"
