Change scroll behavior

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           </div>
         </section>
       </div>
-      <section class="contact-section">
+      <section id="Contact" class="contact-section">
         <form
           method="post"
           action="https://formspree.io/f/mayknqrv"
