--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
       </div>
       <section id="works" class="works-section">
         <div class="section-container">
-          <p class="sectionTitle">My Recent Works</p>
+          <h2 class="sectionTitle">My Recent Works</h2>
           <span class="border"></span>
           <div class="projectCard">
             <div class="cardTop"></div>
             <div class="cardBottom">
-              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
+              <h5 class="cardTitle">Multi-Post Stories Gain+Glory</h5>
               <ul class="techs">
                 <li class="tech">Ruby on Rails</li>
                 <li class="tech">CSS</li>
@@ -63,7 +63,7 @@
           <div class="projectCard">
             <div class="cardTop"></div>
             <div class="cardBottom">
-              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
+              <h5 class="cardTitle">Multi-Post Stories Gain+Glory</h5>
               <ul class="techs">
                 <li class="tech">Ruby on Rails</li>
                 <li class="tech">CSS</li>
@@ -76,7 +76,7 @@
           <div class="projectCard">
             <div class="cardTop"></div>
             <div class="cardBottom">
-              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
+              <h5 class="cardTitle">Multi-Post Stories Gain+Glory</h5>
               <ul class="techs">
                 <li class="tech">Ruby on Rails</li>
                 <li class="tech">CSS</li>
@@ -89,7 +89,7 @@
           <div class="projectCard">
             <div class="cardTop"></div>
             <div class="cardBottom">
-              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
+              <h5 class="cardTitle">Multi-Post Stories Gain+Glory</h5>
               <ul class="techs">
                 <li class="tech">Ruby on Rails</li>
                 <li class="tech">CSS</li>
@@ -102,7 +102,7 @@
           <div class="projectCard">
             <div class="cardTop"></div>
             <div class="cardBottom">
-              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
+              <h5 class="cardTitle">Multi-Post Stories Gain+Glory</h5>
               <ul class="techs">
                 <li class="tech">Ruby on Rails</li>
                 <li class="tech">CSS</li>
@@ -115,7 +115,7 @@
           <div class="projectCard">
             <div class="cardTop"></div>
             <div class="cardBottom">
-              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
+              <h5 class="cardTitle">Multi-Post Stories Gain+Glory</h5>
               <ul class="techs">
                 <li class="tech">Ruby on Rails</li>
                 <li class="tech">CSS</li>
@@ -131,7 +131,7 @@
         <section id="About" class="aboutme-section">
           <div class="section-container">
             <div class="aboutHeader">
-              <p class="sectionTitle">About Me</p>
+              <h2 class="sectionTitle">About Me</h2>
               <p class="bioAboutme">
                 I can help you build a product, feature or website Look through
                 some of my work and experience! If you like what you see and
@@ -140,8 +140,12 @@
               <button class="resumeBtn">Get My Reusme</button>
             </div>
             <div class="technologyCard">
-              <img src="./utils/languages.png" alt="" class="cardImg" />
-              <h2 class="cardTitle">Languages</h2>
+              <img
+                src="./utils/languages.png"
+                alt="languages"
+                class="cardImg"
+              />
+              <h5 class="cardTitle">Languages</h5>
               <ul class="list">
                 <li class="listItem">Javascript</li>
                 <li class="listItem">Ruby</li>
@@ -150,8 +154,12 @@
               </ul>
             </div>
             <div class="technologyCard">
-              <img src="./utils/frameworks.png" alt="" class="cardImg" />
-              <h2 class="cardTitle">Frameworks</h2>
+              <img
+                src="./utils/frameworks.png"
+                alt="frameworks"
+                class="cardImg"
+              />
+              <h5 class="cardTitle">Frameworks</h5>
               <ul class="list">
                 <li class="listItem">Bootstrap</li>
                 <li class="listItem">Ruby on rails</li>
@@ -161,8 +169,8 @@
               </ul>
             </div>
             <div class="technologyCard">
-              <img src="./utils/skills.png" alt="" class="cardImg" />
-              <h2 class="cardTitle">Skills</h2>
+              <img src="./utils/skills.png" alt="skills" class="cardImg" />
+              <h5 class="cardTitle">Skills</h5>
               <ul class="list">
                 <li class="listItem">Codekit</li>
                 <li class="listItem">GitHub</li>
@@ -186,6 +194,9 @@
           </h3>
           <ul class="fields">
             <li>
+              <label for="full-name" class="label-display-none"
+                >Full Name</label
+              >
               <input
                 class="full-name"
                 placeholder="Full Name"
@@ -195,6 +206,9 @@
               />
             </li>
             <li>
+              <label for="email" class="label-display-none"
+                >Email address</label
+              >
               <input
                 class="email"
                 placeholder="Email address"
@@ -203,6 +217,7 @@
               />
             </li>
             <li>
+              <label for="message" class="label-display-none">Message</label>
               <textarea
                 class="message-input"
                 maxlength="500"
