--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css-final.css" />
   </head>
   <body>
-    <div class="container">
+    <div class="container d-flex flex-col">
       <div class="bg">
-        <header class="header">
+        <header class="header d-flex flex-row">
           <p class="logo">Welcome</p>
-          <ul class="nav-list">
+          <ul class="nav-list d-flex flex-row none-style none">
             <li class="nav-item"><a href="#Welcome">Portofolio</a></li>
             <li class="nav-item"><a href="#About">About</a></li>
             <li class="nav-item"><a href="#Contact">Contact</a></li>
           </ul>
           <nav class="fa fa-bars"></nav>
         </header>
-        <section id="Welcome" class="welcome-section">
+        <section id="Welcome" class="welcome-section d-flex flex-col">
           <h1 class="title">Hey there. I'm Kareem.</h1>
           <h2 class="subTitle">I'm a software developer</h2>
           <p class="bio">
@@ -31,28 +31,28 @@
             legacy code into clean code, Looking forward to play with the chips
             of Computers!
           </p>
-          <div class="socials anime">
-            <a href="https://github.com/KareemWilson" class="fa fa-github"></a>
+          <div class="socials anime d-flex ">
+            <a href="https://github.com/KareemWilson" class="fa fa-github none-style"></a>
             <a
               href="https://www.linkedin.com/in/kareem-wilson/"
-              class="fa fa-linkedin"
+              class="fa fa-linkedin none-style"
             ></a>
             <a
               href="https://www.instagram.com/code.afternoon/"
-              class="fa fa-instagram"
+              class="fa fa-instagram none-style"
             ></a>
           </div>
         </section>
       </div>
       <section id="works" class="works-section">
-        <div class="section-container">
-          <h2 class="sectionTitle">My Recent Works</h2>
+        <div class="section-container d-flex flex-col">
+          <h2 class="sectionTitle portfolioTitle">My Recent Works</h2>
           <span class="border"></span>
-          <div class="projectCard">
+          <div class="projectCard d-flex flex-col">
             <div class="cardTop"></div>
-            <div class="cardBottom">
+            <div class="cardBottom d-flex flex-col">
               <h5 class="cardTitle">Multi-Post Stories Gain+Glory</h5>
-              <ul class="techs">
+              <ul class="techs d-flex flex-row none-style">
                 <li class="tech">Ruby on Rails</li>
                 <li class="tech">CSS</li>
                 <li class="tech">Javascript</li>
@@ -61,11 +61,11 @@
               <button type="button" class="btn">See Project</button>
             </div>
           </div>
-          <div class="projectCard">
+          <div class="projectCard d-flex flex-col">
             <div class="cardTop"></div>
-            <div class="cardBottom">
+            <div class="cardBottom d-flex flex-col">
               <h5 class="cardTitle">Multi-Post Stories Gain+Glory</h5>
-              <ul class="techs">
+              <ul class="techs d-flex flex-row none-style">
                 <li class="tech">Ruby on Rails</li>
                 <li class="tech">CSS</li>
                 <li class="tech">Javascript</li>
@@ -74,11 +74,11 @@
               <button type="button" class="btn">See Project</button>
             </div>
           </div>
-          <div class="projectCard">
+          <div class="projectCard d-flex flex-col">
             <div class="cardTop"></div>
-            <div class="cardBottom">
+            <div class="cardBottom d-flex flex-col">
               <h5 class="cardTitle">Multi-Post Stories Gain+Glory</h5>
-              <ul class="techs">
+              <ul class="techs d-flex flex-row none-style">
                 <li class="tech">Ruby on Rails</li>
                 <li class="tech">CSS</li>
                 <li class="tech">Javascript</li>
@@ -87,11 +87,11 @@
               <button type="button" class="btn">See Project</button>
             </div>
           </div>
-          <div class="projectCard">
+          <div class="projectCard d-flex flex-col">
             <div class="cardTop"></div>
-            <div class="cardBottom">
+            <div class="cardBottom d-flex flex-col">
               <h5 class="cardTitle">Multi-Post Stories Gain+Glory</h5>
-              <ul class="techs">
+              <ul class="techs d-flex flex-row none-style">
                 <li class="tech">Ruby on Rails</li>
                 <li class="tech">CSS</li>
                 <li class="tech">Javascript</li>
@@ -100,11 +100,11 @@
               <button type="button" class="btn">See Project</button>
             </div>
           </div>
-          <div class="projectCard">
+          <div class="projectCard d-flex flex-col">
             <div class="cardTop"></div>
-            <div class="cardBottom">
+            <div class="cardBottom d-flex flex-col">
               <h5 class="cardTitle">Multi-Post Stories Gain+Glory</h5>
-              <ul class="techs">
+              <ul class="techs d-flex flex-row none-style">
                 <li class="tech">Ruby on Rails</li>
                 <li class="tech">CSS</li>
                 <li class="tech">Javascript</li>
@@ -113,11 +113,11 @@
               <button type="button" class="btn">See Project</button>
             </div>
           </div>
-          <div class="projectCard">
+          <div class="projectCard d-flex flex-col">
             <div class="cardTop"></div>
-            <div class="cardBottom">
+            <div class="cardBottom d-flex flex-col">
               <h5 class="cardTitle">Multi-Post Stories Gain+Glory</h5>
-              <ul class="techs">
+              <ul class="techs d-flex flex-row none-style">
                 <li class="tech">Ruby on Rails</li>
                 <li class="tech">CSS</li>
                 <li class="tech">Javascript</li>
@@ -147,21 +147,21 @@
                 class="cardImg"
               />
               <h5 class="cardTitle">Languages</h5>
-              <ul class="list">
+              <ul class="list d-flex flex-row">
                 <li class="listItem">Javascript</li>
                 <li class="listItem">Ruby</li>
                 <li class="listItem">Html</li>
                 <li class="listItem">CSS</li>
               </ul>
             </div>
-            <div class="technologyCard">
+            <div class="technologyCard d-flex flex-col">
               <img
                 src="./utils/frameworks.png"
                 alt="frameworks"
                 class="cardImg"
               />
               <h5 class="cardTitle">Frameworks</h5>
-              <ul class="list">
+              <ul class="list d-flex flex-row">
                 <li class="listItem">Bootstrap</li>
                 <li class="listItem">Ruby on rails</li>
                 <li class="listItem">RSpec</li>
@@ -172,7 +172,7 @@
             <div class="technologyCard">
               <img src="./utils/skills.png" alt="skills" class="cardImg" />
               <h5 class="cardTitle">Skills</h5>
-              <ul class="list">
+              <ul class="list d-flex flex-row">
                 <li class="listItem">Codekit</li>
                 <li class="listItem">GitHub</li>
                 <li class="listItem">Codepen</li>
