Add some classNames to control Mobile-menu

--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
         <header class="header">
           <p class="logo">Welcome</p>
           <ul class="nav-list">
-            <li class="nav-item"><a href="#Welcome">Portofolio</a></li>
-            <li class="nav-item"><a href="#About">About</a></li>
-            <li class="nav-item"><a href="#Contact">Contact</a></li>
+            <li class="nav-item close-menu"><a href="#Welcome">Portofolio</a></li>
+            <li class="nav-item close-menu"><a href="#About">About</a></li>
+            <li class="nav-item close-menu"><a href="#Contact">Contact</a></li>
           </ul>
-          <nav class="fa fa-bars"></nav>
+          <nav class="fa fa-bars anime-x openMenu"></nav>
+          <i class="fa fa-close close-menu invisible"></i>
         </header>
         <section id="Welcome" class="welcome-section">
           <h1 class="title">Hey there. I'm Kareem.</h1>
