Change navigation of Portfolio

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="header">
           <p class="logo">Welcome</p>
           <ul class="nav-list">
-            <li class="nav-item close-menu"><a href="#Welcome">Portofolio</a></li>
+            <li class="nav-item close-menu"><a href="#works">Portofolio</a></li>
             <li class="nav-item close-menu"><a href="#About">About</a></li>
             <li class="nav-item close-menu"><a href="#Contact">Contact</a></li>
           </ul>
