--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li class="nav-item close-menu"><a href="#About">About</a></li>
             <li class="nav-item close-menu"><a href="#Contact">Contact</a></li>
           </ul>
-          <nav class="fa fa-bars anime-x openMenu"></nav>
+          <nav class="fa fa-bars openMenu"></nav>
           <i class="fa fa-close close-menu invisible"></i>
         </header>
         <section id="Welcome" class="welcome-section">
