Make Popup details

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <li class="tech">Javascript</li>
                 <li class="tech">html</li>
               </ul>
-              <button class="btn">See Project</button>
+              <button class="btn open-popup">See Project</button>
             </div>
           </div>
           <div class="projectCard">
@@ -76,7 +76,7 @@
                 <li class="tech">Javascript</li>
                 <li class="tech">html</li>
               </ul>
-              <button class="btn">See Project</button>
+              <button class="btn open-popup">See Project</button>
             </div>
           </div>
           <div class="projectCard">
@@ -89,7 +89,7 @@
                 <li class="tech">Javascript</li>
                 <li class="tech">html</li>
               </ul>
-              <button class="btn">See Project</button>
+              <button class="btn open-popup">See Project</button>
             </div>
           </div>
           <div class="projectCard">
@@ -102,7 +102,7 @@
                 <li class="tech">Javascript</li>
                 <li class="tech">html</li>
               </ul>
-              <button class="btn">See Project</button>
+              <button class="btn open-popup">See Project</button>
             </div>
           </div>
           <div class="projectCard">
@@ -115,7 +115,7 @@
                 <li class="tech">Javascript</li>
                 <li class="tech">html</li>
               </ul>
-              <button class="btn">See Project</button>
+              <button class="btn open-popup">See Project</button>
             </div>
           </div>
           <div class="projectCard">
@@ -128,8 +128,42 @@
                 <li class="tech">Javascript</li>
                 <li class="tech">html</li>
               </ul>
-              <button class="btn">See Project</button>
+              <button class="btn open-popup">See Project</button>
             </div>
+          </div>
+        </div>
+        <!-- The Popup -->
+        <div class="popup">
+          <div class="popup-details">
+            <span class="close">X</span>
+            <img
+              src="./utils/Snapshoot Portfolio.png"
+              alt="Snapshoot-of-portfolio"
+            />
+            <div class="title-btns">
+              <h4 class="popup-title ">Keeping track of hundreds of components</h4>
+              <div class="project-btns">
+                <button class="btn">See Life<span class="fa fa-check-square-o"></span></button>
+                <button class="btn">See Source<span class="fa fa-github"></span></button>
+              </div>
+            </div>
+            <ul class="techs-used">
+              <li class="tech">CodeKit</li>
+              <li class="tech">Github</li>
+              <li class="tech">JavaScript</li>
+              <li class="tech">Bootstrap</li>
+              <li class="tech">Codepen</li>
+            </ul>
+            <p class="details-para">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it 1960s with the releaLorem Ipsum is simply
+              dummy text of the printing and typesetting industry. Lorem Ipsum
+              has been the industry's standard dummy text ever since the 1500s,
+              when an unknown printer took a galley of type and scrambled it
+              1960s with the relea
+            </p>
           </div>
         </div>
       </section>
