Refactor folder structure

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                 <li class="tech">Javascript</li>
                 <li class="tech">html</li>
               </ul>
-              <button class="btn open-popup">See Project</button>
+              <button class="btn open-popup"  id="project-1">See Project</button>
             </div>
           </div>
-          <div class="projectCard">
+          <div class="projectCard"  id="project-1">
             <div class="cardTop"></div>
             <div class="cardBottom">
               <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
@@ -137,7 +137,7 @@
           <div class="popup-details">
             <span class="close">X</span>
             <img
-              src="./utils/Snapshoot Portfolio.png"
+              src="./utils/images/Portfolio.png"
               alt="Snapshoot-of-portfolio"
             />
             <div class="title-btns">
@@ -180,7 +180,7 @@
               <button class="resumeBtn">Get My Reusme</button>
             </div>
             <div class="technologyCard">
-              <img src="./utils/languages.png" alt="" class="cardImg" />
+              <img src="./utils/images/languages.png" alt="" class="cardImg" />
               <h2 class="cardTitle">Languages</h2>
               <ul class="list">
                 <li class="listItem">Javascript</li>
@@ -190,7 +190,7 @@
               </ul>
             </div>
             <div class="technologyCard">
-              <img src="./utils/frameworks.png" alt="" class="cardImg" />
+              <img src="./utils/images/frameworks.png" alt="" class="cardImg" />
               <h2 class="cardTitle">Frameworks</h2>
               <ul class="list">
                 <li class="listItem">Bootstrap</li>
@@ -201,7 +201,7 @@
               </ul>
             </div>
             <div class="technologyCard">
-              <img src="./utils/skills.png" alt="" class="cardImg" />
+              <img src="./utils/images/skills.png" alt="" class="cardImg" />
               <h2 class="cardTitle">Skills</h2>
               <ul class="list">
                 <li class="listItem">Codekit</li>
