Generate dynamic project card

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="styles.css" />
+
   </head>
   <body>
     <div class="container">
@@ -50,94 +51,16 @@
         </section>
       </div>
       <section id="works" class="works-section">
-        <div class="section-container">
+        <div class="section-container works-container">
           <p class="sectionTitle">My Recent Works</p>
           <span class="border"></span>
-          <div class="projectCard">
-            <div class="cardTop"></div>
-            <div class="cardBottom">
-              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
-              <ul class="techs">
-                <li class="tech">Ruby on Rails</li>
-                <li class="tech">CSS</li>
-                <li class="tech">Javascript</li>
-                <li class="tech">html</li>
-              </ul>
-              <button class="btn open-popup"  id="project-1">See Project</button>
-            </div>
-          </div>
-          <div class="projectCard"  id="project-1">
-            <div class="cardTop"></div>
-            <div class="cardBottom">
-              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
-              <ul class="techs">
-                <li class="tech">Ruby on Rails</li>
-                <li class="tech">CSS</li>
-                <li class="tech">Javascript</li>
-                <li class="tech">html</li>
-              </ul>
-              <button class="btn open-popup">See Project</button>
-            </div>
-          </div>
-          <div class="projectCard">
-            <div class="cardTop"></div>
-            <div class="cardBottom">
-              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
-              <ul class="techs">
-                <li class="tech">Ruby on Rails</li>
-                <li class="tech">CSS</li>
-                <li class="tech">Javascript</li>
-                <li class="tech">html</li>
-              </ul>
-              <button class="btn open-popup">See Project</button>
-            </div>
-          </div>
-          <div class="projectCard">
-            <div class="cardTop"></div>
-            <div class="cardBottom">
-              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
-              <ul class="techs">
-                <li class="tech">Ruby on Rails</li>
-                <li class="tech">CSS</li>
-                <li class="tech">Javascript</li>
-                <li class="tech">html</li>
-              </ul>
-              <button class="btn open-popup">See Project</button>
-            </div>
-          </div>
-          <div class="projectCard">
-            <div class="cardTop"></div>
-            <div class="cardBottom">
-              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
-              <ul class="techs">
-                <li class="tech">Ruby on Rails</li>
-                <li class="tech">CSS</li>
-                <li class="tech">Javascript</li>
-                <li class="tech">html</li>
-              </ul>
-              <button class="btn open-popup">See Project</button>
-            </div>
-          </div>
-          <div class="projectCard">
-            <div class="cardTop"></div>
-            <div class="cardBottom">
-              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
-              <ul class="techs">
-                <li class="tech">Ruby on Rails</li>
-                <li class="tech">CSS</li>
-                <li class="tech">Javascript</li>
-                <li class="tech">html</li>
-              </ul>
-              <button class="btn open-popup">See Project</button>
-            </div>
-          </div>
         </div>
         <!-- The Popup -->
         <div class="popup">
           <div class="popup-details">
             <span class="close">X</span>
             <img
-              src="./utils/images/Portfolio.png"
+              src="./utils/images/Snapshoot Portfolio.png"
               alt="Snapshoot-of-portfolio"
             />
             <div class="title-btns">
@@ -281,6 +204,87 @@ Enter text here</textarea
         >
       </footer>
     </div>
-    <script src="./script.js"></script>
+    <script type="module" src="./script.js"></script>
+
   </body>
 </html>
+
+
+          <!-- <div class="projectCard">
+            <div class="cardTop"></div>
+            <div class="cardBottom">
+              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
+              <ul class="techs">
+                <li class="tech">Ruby on Rails</li>
+                <li class="tech">CSS</li>
+                <li class="tech">Javascript</li>
+                <li class="tech">html</li>
+              </ul>
+              <button class="btn open-popup"  id="project-1">See Project</button>
+            </div>
+          </div>
+          <div class="projectCard">
+            <div class="cardTop"></div>
+            <div class="cardBottom">
+              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
+              <ul class="techs">
+                <li class="tech">Ruby on Rails</li>
+                <li class="tech">CSS</li>
+                <li class="tech">Javascript</li>
+                <li class="tech">html</li>
+              </ul>
+              <button class="btn open-popup">See Project</button>
+            </div>
+          </div>
+          <div class="projectCard">
+            <div class="cardTop"></div>
+            <div class="cardBottom">
+              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
+              <ul class="techs">
+                <li class="tech">Ruby on Rails</li>
+                <li class="tech">CSS</li>
+                <li class="tech">Javascript</li>
+                <li class="tech">html</li>
+              </ul>
+              <button class="btn open-popup">See Project</button>
+            </div>
+          </div>
+          <div class="projectCard">
+            <div class="cardTop"></div>
+            <div class="cardBottom">
+              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
+              <ul class="techs">
+                <li class="tech">Ruby on Rails</li>
+                <li class="tech">CSS</li>
+                <li class="tech">Javascript</li>
+                <li class="tech">html</li>
+              </ul>
+              <button class="btn open-popup">See Project</button>
+            </div>
+          </div>
+          <div class="projectCard">
+            <div class="cardTop"></div>
+            <div class="cardBottom">
+              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
+              <ul class="techs">
+                <li class="tech">Ruby on Rails</li>
+                <li class="tech">CSS</li>
+                <li class="tech">Javascript</li>
+                <li class="tech">html</li>
+              </ul>
+              <button class="btn open-popup">See Project</button>
+            </div>
+          </div>
+          <div class="projectCard">
+            <div class="cardTop"></div>
+            <div class="cardBottom">
+              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
+              <ul class="techs">
+                <li class="tech">Ruby on Rails</li>
+                <li class="tech">CSS</li>
+                <li class="tech">Javascript</li>
+                <li class="tech">html</li>
+              </ul>
+              <button class="btn open-popup">See Project</button>
+            </div> 
+          </div> -->
